# prefer-dynamic

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
hello-world/: Cargo.toml
prefer-dynamic/: Cargo.toml  build.rs  tomlfml.toml
prefer-dynamic/src/: lib.rs
src/: lib.rs
