[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
rust-version = "1.77.0"

[target.'cfg(any(unix, windows))'.dependencies]
prefer-dynamic = { version = "0.2.0", path = "../prefer-dynamic" }

[target.'cfg(any(unix, windows))'.dev-dependencies]
prefer-dynamic = { version = "0.2.0", path = "../prefer-dynamic" }
