[package]
name = "prefer-dynamic"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["dylib", "prefer-dynamic", "cargo"]
categories = ["development-tools::build-utils"]
repository = "https://github.com/WilliamVenner/prefer-dynamic"
description = "Copies the pre-compiled dynamic `std` library to your target directory, for `-Cprefer-dynamic` and `dylib` crates"
rust-version = "1.77.0"

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition", "--cfg=docsrs"]
